src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/WGLARBPbuffer_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/WGLARBPbuffer_StringErrorContext.class */
public final class WGLARBPbuffer_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nwglCreatePbufferARB(JIIIJ)J", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPbufferErrorContext");
        methods.put("wglCreatePbufferARB(JIIILjava/nio/IntBuffer;)J", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPbufferErrorContext");
        methods.put("wglGetPbufferDCARB(J)J", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPbufferErrorContext");
        methods.put("wglReleasePbufferDCARB(JJ)I", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPbufferErrorContext");
        methods.put("wglDestroyPbufferARB(J)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPbufferErrorContext");
        methods.put("nwglQueryPbufferARB(JIJ)I", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPbufferErrorContext");
        methods.put("wglQueryPbufferARB(JILjava/nio/IntBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPbufferErrorContext");
        methods.put("wglCreatePbufferARB(JIII[I)J", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPbufferErrorContext");
        methods.put("wglQueryPbufferARB(JI[I)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLARBPbufferErrorContext");
        return methods;
    }
}
